--- a/templates/user.xml
+++ b/templates/user.xml
@@ -24,7 +24,7 @@
       <option name="KOTLIN_TOPLEVEL" value="true" />
     </context>
   </template>
-  <template name="dfun" value="fun $NAME$($ARGS$): $TYPE$ {&#10;    $CURSOR$&#10;}" toReformat="true" toShortenFQNames="true">
+  <template name="dfun" value="fun $NAME$($ARGS$): $TYPE$ {&#10;    $CURSOR$&#10;}" description="" toReformat="true" toShortenFQNames="true">
     <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="ARGS" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="TYPE" expression="" defaultValue="" alwaysStopAt="true" />
